FIX: Need to explicitly state the welcome in the locale dictionary
Saw the following message when creating a user:

Translation missing. Options considered were:
- en.users.create.welcome
- en.users.welcome

Also, not passing the name variable correctly in the #create action

--- a/config/locales/views/users/en.yml
+++ b/config/locales/views/users/en.yml
@@ -3,4 +3,5 @@ en:
     new:
       title: Sign up for Piazza
       sign_up: Sign up!
-    create: "Welcome to Piazza %{name}"
+    create: 
+      welcome: "Welcome to Piazza, %{name}"
